--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ before_install:
   - npm install -g mongodb-version-manager
 install:
   - m $MONGOVERSION
-before_script:
+  - mkdir db
+  - export PATH=`m path`:$PATH
   - export PATH=`pwd`/elixir/bin:$PATH
   - mix local.hex --force
+before_script:
+  - mongod --fork --logpath mongo.log --dbpath db
   - mix deps.get
 script:
   - mix test
