--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ env:
     - ELIXIRVERSION=v1.0.4
   matrix:
     - MONGOVERSION=2.4.14
+    - MONGOVERSION=2.6.10
+    - MONGOVERSION=3.0.3
 notifications:
   recipients:
     - eric.meadows.jonsson@gmail.com
