Add SCRAM auth for 3.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
   matrix:
     - MONGOVERSION=2.4.14
     - MONGOVERSION=2.6.10
+    - MONGOVERSION=3.0.3
 notifications:
   recipients:
     - eric.meadows.jonsson@gmail.com
