OTP 17.4 has buggy map pattern matching

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,10 @@ env:
 matrix:
   include:
     - elixir: 1.0.5
+      otp_release: 17.5
       env: MONGOVERSION=3.2.4
     - elixir: 1.1.1
+      otp_release: 17.5
       env: MONGOVERSION=3.2.4
 after_script:
   - mix deps.get --only docs
