--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+sudo: required
+services:
+  - docker
 language: elixir
 elixir:
   - 1.3.2
@@ -6,6 +9,10 @@ cache:
   - directories:
     - ~/.mongodb
 before_install:
+  - rm -rf ~/.nvm
+  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.32.1/install.sh | bash
+  - source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
+  - npm i -g npm
   - npm install -g mongodb-version-manager
   - m use $MONGOVERSION
   - mkdir db
