--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ addons:
   apt:
     sources:
     - sourceline: 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
-      key_url: 'hkp://ha.pool.sks-keyservers.net:80'
 before_install:
+  - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
   - rm -rf ~/.nvm
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.32.1/install.sh | bash
   - source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
