--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,7 @@ cache:
   - apt
   - directories:
     - ~/.mongodb
-addons:
-  apt:
-    sources:
-    - sourceline: 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
 before_install:
-  - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
   - rm -rf ~/.nvm
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.32.1/install.sh | bash
   - source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
@@ -21,11 +16,11 @@ before_install:
   - npm install -g mongodb-version-manager
   - m use $MONGOVERSION
   - mkdir db
+  - docker --version
   - docker ps -a
   - which docker
-  - echo $PATH
 before_script:
-  - sudo service mongodb stop
+# - sudo systemctl stop mongodb
   - export PATH=$(m path):$PATH
   - echo $PATH
   - mongod --fork --logpath mongo.log --dbpath db
