--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: elixir
 elixir:
-  - 1.2.5
+  - 1.2.6
+  - 1.3.4
 cache:
   - apt
   - directories:
     - ~/.mongodb
 before_install:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
   - npm install -g mongodb-version-manager
   - m use $MONGOVERSION
   - mkdir db
