Add 3.6.0 to the test matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,4 @@ env:
     - MONGOVERSION=3.0.15 TRAVIS_NODE_VERSION=4
     - MONGOVERSION=3.2.13 TRAVIS_NODE_VERSION=4
     - MONGOVERSION=3.4.4 TRAVIS_NODE_VERSION=4
+    - MONGOVERSION=3.6.0 TRAVIS_NODE_VERSION=4
