--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ before_script:
 
 script:
   - mix test
-  - mix dialyzer --halt-exit-status
+  - not_allowed=(1.3 1.4 1.5)
+  - case "${not_allowed[@]}" in  *"${TRAVIS_ELIXIR_VERSION}"*) dialyzer=0 ;; *) dialyzer=1 ;; esac
+  - if [ "$dialyzer" -eq 1 ]; then mix dialyzer --halt-exit-status; fi
 
 env:
   matrix:
