--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ sudo: required
 language: elixir
 
 elixir:
-  - 1.4
   - 1.5
   - 1.6
   - 1.7
+  - 1.8
 
 cache:
   - apt
@@ -29,7 +29,7 @@ before_script:
 
 script:
   - mix test
-  - not_allowed=(1.3 1.4 1.5)
+  - not_allowed=(1.4 1.5)
   - case "${not_allowed[@]}" in  *"${TRAVIS_ELIXIR_VERSION}"*) dialyzer=0 ;; *) dialyzer=1 ;; esac
   - if [ "$dialyzer" -eq 1 ]; then mix dialyzer --halt-exit-status; fi
 
