Add mongo development version to the test matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,4 @@ env:
     - MONGOVERSION=3.4.20 TRAVIS_NODE_VERSION=4
     - MONGOVERSION=3.6.12 TRAVIS_NODE_VERSION=4
     - MONGOVERSION=4.0.9 TRAVIS_NODE_VERSION=4
+    - MONGOVERSION=4.1.10 TRAVIS_NODE_VERSION=4
