--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
   - apt
   - directories:
     - ~/.mongodb
-    - ./plt_core_path
+    - ~/.mix
 
 before_install:
   - . $HOME/.nvm/nvm.sh
@@ -29,9 +29,7 @@ before_script:
 
 script:
   - mix test
-  - not_allowed=(1.4 1.5)
-  # - case "${not_allowed[@]}" in  *"${TRAVIS_ELIXIR_VERSION}"*) dialyzer=0 ;; *) dialyzer=1 ;; esac
-  # - if [ "$dialyzer" -eq 1 ]; then mix dialyzer --halt-exit-status; fi
+  - mix dialyzer
 
 env:
   matrix:
