Use existing bash script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,16 +49,22 @@ jobs:
           path: |
             deps
             _build
-            priv/plts
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: |
             ${{ runner.os }}-mix-
-      - run: MONGO_VERSION=${{ matrix.mongo-version}} docker-compose up -d      
-      - name: Install mongosh
+      - name: Install Mongo
         run: |
-          # See https://docs.mongodb.com/mongodb-shell/install/
+          # See https://docs.mongodb.com/manual/tutorial/install-mongodb-on-ubuntu/
+
+          # Import MongoDB public key
           wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add -
+
+          # Create a list file for MongoDB
           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/5.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-5.0.list
+
+          # Update package db
           sudo apt-get update
-          sudo apt-get install -y mongodb-mongosh
+
+          # Finally install mongodb
+          sudo apt-get install -y mongodb-org
       - run: mix test --cover
