--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,14 +57,17 @@ jobs:
           # See https://docs.mongodb.com/manual/tutorial/install-mongodb-on-ubuntu/
 
           # Import MongoDB public key
-          wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add -
+          wget -qO - https://www.mongodb.org/static/pgp/server-${{ matrix.mongo-version }}.asc | sudo apt-key add -
 
           # Create a list file for MongoDB
-          echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/5.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-5.0.list
+          echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/${{ matrix.mongo-version }} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-${{ matrix.mongo-version }}.list
 
           # Update package db
           sudo apt-get update
 
           # Finally install mongodb
           sudo apt-get install -y mongodb-org
+      - name: Start Mongo
+        run: |
+          sudo systemctl start mongod
       - run: mix test --cover
