Add mongo status output

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,5 +69,9 @@ jobs:
           sudo apt-get install -y mongodb-org
       - name: Start Mongo
         run: |
+          # Start Mongo
           sudo systemctl start mongod
+
+          # Get Mongo status
+          sudo systemctl status mongod
       - run: mix test --cover
